--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,14 +2,54 @@ repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
     hooks:
-    -   id: check-yaml
+    -   id: check-builtin-literals
+    -   id: check-case-conflict
+    -   id: check-merge-conflict
+    -   id: check-toml
     -   id: end-of-file-fixer
+    -   id: fix-byte-order-marker
     -   id: trailing-whitespace
--   repo: https://github.com/psf/black
-    rev: 22.6.0
+    -   id: name-tests-test
+        args: [--pytest-test-first]
+    -   id: mixed-line-ending
+        args: [--fix, lf]
+-   repo: https://github.com/asottile/pyupgrade
+    rev: v2.37.3
     hooks:
-    -   id: black
+    -   id: pyupgrade
+        args: [--py310-plus]
 -   repo: https://github.com/flakeheaven/flakeheaven
     rev: 2.1.3
     hooks:
     -   id: flakeheaven
+-   repo: https://github.com/psf/black
+    rev: 22.6.0
+    hooks:
+    -   id: black
+-   repo: https://github.com/PyCQA/bandit
+    rev: 1.7.4
+    hooks:
+    -   id: bandit
+        args: [--exclude, tests]
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev:  v0.971
+    hooks:
+    -   id: mypy
+-   repo: https://github.com/Lucas-C/pre-commit-hooks-safety
+    rev: v1.3.0
+    hooks:
+    -   id: python-safety-dependencies-check
+        files: pyproject.toml
+- repo: https://github.com/pycqa/isort
+  rev: 5.10.1
+  hooks:
+    -   id: isort
+- repo: https://gitlab.com/smop/pre-commit-hooks
+  rev: v1.0.0
+  hooks:
+    -   id: check-poetry
+# - repo: https://github.com/jendrikseipp/vulture
+#   rev: v2.5
+#   hooks:
+#     -   id: vulture
+#         args: [.]
